# croaring-rs

./: Cargo.toml
croaring-sys/: Cargo.toml  build.rs
croaring-sys/CRoaring/: roaring.h
