[package]
name = "croaring-sys"
version = "0.3.10"
authors = ["Saulius Grigaliunas <saulius@ninja.lt>"]
license = "Apache-2.0"
repository = "https://github.com/saulius/croaring-rs.git"
readme = "../README.md"
documentation = "https://docs.rs/croaring-sys"
build = "build.rs"
description = "Raw bindings to CRoaring"

[dependencies]
libc = "0.2.42"

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.65.1", optional = true, default-features = false, features = ["runtime"] }
